--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 ################################################################################
 
 /.vs/YooooooEditor/v16/Browse.VC.opendb
+/.vs/YooooooEditor/v16/Browse.VC.db-wal
+/.vs/YooooooEditor/v16/Browse.VC.db-shm
+/.vs/YooooooEditor/v16/Browse.VC.db
+/.vs/slnx.sqlite
+/.vs/ProjectSettings.json
+/.vs/YooooooEditor/v16/ipch/AutoPCH/517a1280134be8a/RAWOPEN.ipch
+/.vs/YooooooEditor/v16/.suo
+/.vs/VSWorkspaceState.json
