Dll and Csharp Call sample

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /.vs/YooooooEditor/v16/ipch/AutoPCH/517a1280134be8a/RAWOPEN.ipch
 /.vs/YooooooEditor/v16/.suo
 /.vs/VSWorkspaceState.json
+/TestCsharp/.vs/TestCsharp/v16
