--- a/Dll1/Dll1.vcxproj.filters
+++ b/Dll1/Dll1.vcxproj.filters
@@ -35,7 +35,7 @@
     <ClCompile Include="Source.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
-    <ClCompile Include="Source1.cpp">
+    <ClCompile Include="CSharpCall.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
   </ItemGroup>
